--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 			<input type="text" placeholder="What is your zodiac Sign?" id="lulu"><br>
 			<button class="btn btn-primary" type="button" onclick="getInfo()">FIND SIGN</button>
 		</form>
-		<h1 id="karma"></h1>
-		<img id="image" src="">
-		<p id="content"></p>
-
+		<div id="yoyo">
+			<h1 id="karma"></h1>
+			<img id="image" src="">
+			<p id="content"></p>
+		</div>	
 	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="js/main.js"></script>
