--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 			<input type="text" placeholder="What is your zodiac Sign?" id="lulu"><br>
 			<button class="btn btn-primary" type="button" onclick="getInfo()">FIND SIGN</button>
 		</form>
-		<div id="yoyo">
+		<div>
 			<h1 id="karma"></h1>
 			<img id="image" src="">
 			<p id="content"></p>
+			<h1 id="head"></h1>
 		</div>	
 	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
